# coinbase

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
coinbase/: __init__.py  abstract.py  advanced.py  api.py  auth.py  client.py  messenger.py  socket.py  wallet.py
docs/: 01-Coinbase.md  02-API.md  03-Auth.md  README.md  index.html  search.js
docs/coinbase/: __init__.html  api.html  auth.html  messenger.html  wallet.html
docs/samples/: messenger.html  wallet.html
docs/samples/messenger/: advanced.html  paging.html
docs/samples/wallet/: account.html  spot_price.html  transactions.html
samples/: advanced.py  socket.py  transactions.py  wallet.py
samples/messenger/: advanced.py  paging.py
samples/wallet/: account.py  spot_price.py  transactions.py
tests/: conftest.py  teardown.py  test_api.py  test_auth.py  test_messenger.py  test_wallet.py
