[tool.poetry]
name = "coinbase"
version = "0.2.0"
description = "Another Unofficial Python Wrapper for Coinbase"
authors = ["teleprint-me"]
license = "AGPL"

[tool.poetry.dependencies]
python = ">=3.8"
requests = ">=2.23.0"

[tool.poetry.dev-dependencies]
black = ">=22.1.0"
flake8 = ">=4.0.1"
pytest = ">=7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
