[tool.poetry]
name               = "coinbase"
version            = "0.2.2"
description        = "Another Unofficial Python Wrapper for Coinbase"
authors            = ["teleprint-me"]
license            = "AGPL"

[tool.poetry.dependencies]
python             = "^3.8"
certifi            = ">=2021.10.8"
charset-normalizer = ">=2.0.12"
idna               = ">=3.3"
pip                = ">=22.0.3"
requests           = ">=2.27.1"
setuptools         = ">=60.9.3"
urllib3            = ">=1.26.8"
wheel              = ">=0.37.1"

[tool.poetry.dev-dependencies]
black              = ">=22.1.0"
flake8             = ">=4.0.1"
pytest             = ">=7.0.1"

[build-system]
requires           = ["poetry-core>=1.0.0"]
build-backend      = "poetry.core.masonry.api"
