[tool.poetry]
name               = "coinbase"
version            = "0.3.0"
description        = "Another Unofficial Python Wrapper for Coinbase"
authors            = ["Austin Berrio"]
license            = "AGPL"

[tool.poetry.dependencies]
python             = "^3.10"
requests           = "^2.28.2"
websocket-client   = "^1.5.0"

[tool.poetry.dev-dependencies]
bpython            = "^0.24"
black              = "^23.1.0"
flake8             = "^6.0.0"
flake8-black       = "^0.3.6"
pytest             = "^7.2.1"
python-dateutil    = "^2.8.2"
iso8601            = "^1.1.0"
python-dotenv      = "^0.21.1"

[tool.black]
line-length = 100

[build-system]
requires           = ["poetry-core>=1.0.0"]
build-backend      = "poetry.core.masonry.api"
